--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~npm-font-open-sans";
+
+html,
+body {
+  max-width: 1000px;
+  margin: auto;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f8f8f8;
+}
