--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,22 +1,23 @@
 @media (max-width: 910px) {
-  header.page-header {
-    height: 170px;
+  .page-header .logo {
+    padding-top: 87px;
+    padding-bottom: 20px;
+    padding-left: 20px;
   }
 
-  .page-header h1 {
+  .logo h1 {
     font-size: 32px;
     height: 36px;
     line-height: 36px;
     letter-spacing: -0.2px;
-    margin: 13px auto 0 18px;
   }
 
-  .page-header h2 {
+  .logo h2 {
     font-size: 14px;
     height: 20px;
     line-height: 20px;
     letter-spacing: -0.1px;
-    margin: 7px auto 0 20px;
+    margin: 7px 0 0 0;
   }
 
   .back-arrow {
@@ -31,7 +32,7 @@
   .guest-container {
     order: 1;
     height: 60px;
-    border-bottom: 1px solid #eeeeee;
+    border-bottom: 1px solid #eee;
   }
 
   .guest-form {
@@ -40,11 +41,11 @@
     margin: 15px 20px;
   }
 
-  #guest {
+  .guest-select {
     width: calc(100% - 105px);
   }
 
-  #reservation-date {
+  .reservation-date-select {
     width: calc(100% - 85px);
   }
 
@@ -52,7 +53,7 @@
     order: 2;
     width: 100%;
     height: 60px;
-    border-bottom: 1px solid #eeeeee;
+    border-bottom: 1px solid #eee;
   }
 
   .slots-container {
@@ -80,33 +81,34 @@
     margin: 20px auto 9px auto;
     opacity: 0.5;
     border-radius: 100px;
-    background-color: #000000;
+    background-color: #000;
   }
 }
 
 @media (min-width: 911px) {
-  header.page-header {
-    height: 200px;
+  .page-header .logo {
+    padding-top: 85px;
+    padding-bottom: 40px;
+    padding-left: 30px;
+  }
+
+  .logo h1 {
+    font-size: 36px;
+    height: 49px;
+    letter-spacing: -0.2px;
+  }
+
+  .logo h2 {
+    font-size: 16px;
+    height: 20px;
+    line-height: 20px;
+    margin: 6px 0 0 0;
   }
 
   .main-content {
     flex-flow: column wrap;
     height: 700px;
     padding: 50px 7%;
-  }
-
-  .page-header h1 {
-    font-size: 36px;
-    height: 49px;
-    letter-spacing: -0.2px;
-    margin: 31px auto 0 28px;
-  }
-
-  .page-header h2 {
-    font-size: 16px;
-    height: 20px;
-    line-height: 20px;
-    margin: 6px auto 0 30px;
   }
 
   .back-arrow {
@@ -172,7 +174,7 @@
   .update-container {
     display: flex;
     height: 130px;
-    background-color: #ffffff;
+    background-color: #fff;
   }
 
   .indicator-rect {
@@ -181,40 +183,41 @@
 }
 
 /* Header */
-header.page-header {
+.page-header {
   border-radius: 20px;
   box-shadow: 0 5px 30px 0 rgba(0, 0, 0, 0.05);
   background-image: linear-gradient(to bottom, rgba(61, 60, 59, 0.1), rgba(61, 60, 59, 0.5) 54%, rgba(61, 60, 59, 0.8));
 }
 
+.page-header::after {
+  opacity: 0.75;
+}
+
 .logo {
   height: inherit;
-  position: relative;
   background-image: url(../assets/restic.jpg);
   background-size: cover;
   background-position: center;
-}
-
-.logo:after {
-  opacity: 0.75;
 }
 
 .back-arrow {
   width: 24px;
   height: 24px;
   border: none;
+  position: absolute;
   background: url("../assets/back-white.svg") no-repeat center;
 }
 
 .page-header h1 {
+  margin: 0;
   font-weight: normal;
-  color: #ffffff;
+  color: #fff;
 }
 
 .page-header h2 {
   opacity: 0.8;
   font-weight: normal;
-  color: #ffffff;
+  color: #fff;
 }
 
 /* Main */
@@ -241,7 +244,7 @@ header.page-header {
   margin: 15px 20px;
   font-size: 16px;
   font-weight: 300;
-  color: #333333;
+  color: #333;
 }
 
 .left-calendar-arrow {
@@ -266,14 +269,14 @@ header.page-header {
   line-height: 1.56;
   letter-spacing: 0;
   text-align: center;
-  color: #333333;
+  color: #333;
 }
 
 .week-day {
   font-size: 13px;
   text-align: center;
   flex-basis: calc(100% / 7);
-  color: #999999;
+  color: #999;
 }
 
 .day {
@@ -281,7 +284,7 @@ header.page-header {
   font-weight: 300;
   text-align: center;
   flex-basis: calc(100% / 7);
-  color: #444444;
+  color: #444;
 }
 
 .selected-day {
@@ -289,7 +292,7 @@ header.page-header {
   height: 40px;
   line-height: 40px;
   border-radius: 80px;
-  color: #ffffff;
+  color: #fff;
   background-color: #e16640;
 }
 
@@ -300,7 +303,7 @@ header.page-header {
 .guest-container {
   font-size: 16px;
   font-weight: 300;
-  color: #333333;
+  color: #333;
 }
 
 .select-arrow {
@@ -330,7 +333,8 @@ select {
   font-size: 14px;
   font-weight: 300;
   letter-spacing: 0.2px;
-  color: #999999;
+  color: #999;
+  text-transform: uppercase;
 }
 
 .slots-content {
@@ -346,7 +350,7 @@ select {
   line-height: 40px;
   text-align: center;
   margin: 0 5px 10px 0;
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 .selected-slot-rect {
@@ -360,7 +364,7 @@ select {
   font-weight: 300;
   letter-spacing: -0.1px;
   text-align: center;
-  color: #666666;
+  color: #666;
 }
 
 .selected-slot-text {
@@ -369,7 +373,7 @@ select {
   font-size: 14px;
   letter-spacing: -0.1px;
   text-align: center;
-  color: #ffffff
+  color: #fff
 }
 
 .update-container {
@@ -383,6 +387,6 @@ select {
   font-size: 16px;
   letter-spacing: 0.2px;
   text-align: center;
-  color: #ffffff;outline:0;
+  color: #fff;outline:0;
   background-color: #e16640;
 }
