--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,29 +29,32 @@
       </div>
     </div>
 
-    <div class="guest-container">
-      <form [formGroup]="guestForm" class="guest-form">
-        <label for="guest" class="guest-group">Table for</label>
-        <select id="guest" formControlName="guest" class="select-arrow guest-select">
-          <option *ngFor="let guest of guests" [value]="guest.value">
-            {{guest.viewValue}}
-          </option>
-        </select>
-      </form>
-    </div>
+    <div class="select-table-container">
+      <div class="guest-container">
+        <form [formGroup]="guestForm" class="guest-form">
+          <label for="guest" class="guest-group">Table for</label>
+          <select id="guest" formControlName="guest" class="select-arrow guest-select">
+            <option *ngFor="let guest of guests" [value]="guest.value">
+              {{guest.viewValue}}
+            </option>
+          </select>
+        </form>
+      </div>
 
-    <div class="slots-container">
-      <span class="dinner">dinner</span>
-      <div class="slots-content">
-        <div class="slot-rect" *ngFor="let slot of actualSlots" [ngClass]="{'selected-slot-rect': isSelectedSlot(slot)}">
-          <span [ngClass]="isSelectedSlot(slot) ? 'selected-slot-text' : 'simple-slot-text'">{{slot}}</span>
+      <div class="slots-container">
+        <span class="dinner">dinner</span>
+        <div class="slots-content">
+          <div class="slot-rect" *ngFor="let slot of actualSlots"
+               [ngClass]="{'selected-slot-rect': isSelectedSlot(slot)}">
+            <span [ngClass]="isSelectedSlot(slot) ? 'selected-slot-text' : 'simple-slot-text'">{{slot}}</span>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <div class="update-container">
-    <button class="update-button">UPDATE</button>
+    <button class="update-button">update</button>
     <div class="indicator-rect"></div>
   </div>
 </main>
