--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <h2>{{"Table for " + guestForm.get('guest').value + ", Today @ "+ activeSlot}}</h2>
   </div>
 </header>
-<main>
+<main class="main-container">
   <section class="main-content">
     <div class="calendar-container">
       <div class="reservation-date-container">
