--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,8 +45,8 @@
         <span class="dinner">dinner</span>
         <div class="slots-content">
           <div class="slot-rect" *ngFor="let slot of actualSlots"
-               [ngClass]="{'selected-slot-rect': isSelectedSlot(slot)}">
-            <span [ngClass]="isSelectedSlot(slot) ? 'selected-slot-text' : 'simple-slot-text'" (click)="selectSlot(slot)">{{slot}}</span>
+               [ngClass]="{'selected-slot-rect': isSelectedSlot(slot)}" (click)="selectSlot(slot)">
+            <span [ngClass]="isSelectedSlot(slot) ? 'selected-slot-text' : 'simple-slot-text'">{{slot}}</span>
           </div>
         </div>
       </div>
